--- a/css-flexbox-playlist-master/index.html
+++ b/css-flexbox-playlist-master/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <title>The Net Ninja - CSS Flexbox</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <h1>TestA!</h1>
     <div class="wrapper">
       <div class="flex-container">
         <div class="box one"></div>
